# django-cdt-identity

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  compose.yml  data.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh
.github/: CODEOWNERS
.github/workflows/: codeql.yml  dependency-triage.yml  tests-pytest.yml
cdt_identity/: admin.py  apps.py  client.py  models.py  routes.py  secrets.py  session.py  urls.py  views.py
cdt_identity/migrations/: 0001_initial.py
cdt_identity/models/: __init__.py  config.py  request.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_094afaf8649c58c2_0001_initial_py.html  z_931fef5866780c8f___init___py.html  z_931fef5866780c8f_admin_py.html  z_931fef5866780c8f_apps_py.html  z_931fef5866780c8f_claims_py.html  z_931fef5866780c8f_client_py.html  z_931fef5866780c8f_models_py.html  z_931fef5866780c8f_redirects_py.html  z_931fef5866780c8f_routes_py.html  z_931fef5866780c8f_secrets_py.html  z_931fef5866780c8f_session_py.html  z_931fef5866780c8f_urls_py.html  z_931fef5866780c8f_views_py.html  z_ad54ec0e2f0fecb0___init___py.html
oidc_identity/: __init__.py  admin.py  apps.py  claims.py  client.py  models.py  redirects.py  routes.py  urls.py  views.py
oidc_identity/migrations/: 0001_initial.py
tests/: conftest.py  run.sh  settings.py  test_claims.py  test_client.py  test_models.py  test_redirects.py  test_session.py  test_urls.py  test_version.py  test_views.py  urls.py
tests/models/: test_config.py  test_request.py
(+6 files in other folders)
