[project]
name = "django-oidc-identity"
dynamic = ["version"]
description = "Django OpenID Connect Identity"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
maintainers = [{ name = "Compiler LLC", email = "dev@compiler.la" }]
dependencies = ["Django>=5.1.0"]

[project.optional-dependencies]
dev = ["black", "djlint", "flake8", "pre-commit", "setuptools_scm>=8"]
test = ["coverage", "pytest", "pytest-django", "pytest-mock", "pytest-socket"]

[project.urls]
Code = "https://github.com/compilerla/django-oidc-identity"
Issues = "https://github.com/compilerla/django-oidc-identity/issues"

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["oidc_identity"]

[tool.setuptools.packages.find]
include = ["oidc_identity*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
